etc/iptables/rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Thu Jun  4 15:11:32 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4:352]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i frognet0 -j ACCEPT
-A INPUT -i wg0 -j ACCEPT
-A INPUT -i wg1 -j ACCEPT
-A INPUT -i wg2 -j ACCEPT
-A INPUT -i wg3 -j ACCEPT
-A INPUT -i wlan1 -j ACCEPT
-A INPUT -i ham0 -p tcp -m tcp --dport 9009 -j ACCEPT
-A INPUT -i ham0 -p udp -m udp --dport 17777 -j ACCEPT
-A INPUT -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -p udp -m udp --dport 10000:20000 -j ACCEPT
-A INPUT -i wlan0 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o frognet0 -j ACCEPT
-A FORWARD -i frognet0 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o wg0 -j ACCEPT
-A FORWARD -i wg0 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o wg1 -j ACCEPT
-A FORWARD -i wg1 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o wg2 -j ACCEPT
-A FORWARD -i wg2 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o wg3 -j ACCEPT
-A FORWARD -i wg3 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o wlan1 -j ACCEPT
-A FORWARD -i wlan1 -o eth0 -j ACCEPT
-A FORWARD -i ham0 -j ACCEPT
-A FORWARD -o ham0 -j ACCEPT
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -o wg0 -j ACCEPT
-A FORWARD -i wg1 -j ACCEPT
-A FORWARD -o wg1 -j ACCEPT
-A FORWARD -i wg2 -j ACCEPT
-A FORWARD -o wg2 -j ACCEPT
-A FORWARD -i wg3 -j ACCEPT
-A FORWARD -o wg3 -j ACCEPT
-A FORWARD -i eth0 -o wlan0 -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
COMMIT
# Completed on Thu Jun  4 15:11:32 2026
# Generated by iptables-save v1.8.9 (nf_tables) on Thu Jun  4 15:11:32 2026
*nat
:PREROUTING ACCEPT [5025:852866]
:INPUT ACCEPT [2081:153591]
:OUTPUT ACCEPT [10864:680585]
:POSTROUTING ACCEPT [14109:860818]
-A PREROUTING -d 10.0.0.0/8 -i eth0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 80
-A PREROUTING -d 10.0.0.0/8 -i wlan0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 80
-A PREROUTING -d 10.0.0.0/8 -p tcp -m tcp --dport 18432 -j REDIRECT --to-ports 18432
-A OUTPUT -p tcp -m mark --mark 0x1 -m tcp --dport 80 -j RETURN
-A OUTPUT -d 127.0.0.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 10.0.0.0/8 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 80
-A OUTPUT -p tcp -m mark --mark 0x1 -m tcp --dport 18432 -j RETURN
-A OUTPUT -d 10.0.0.0/8 -p tcp -m tcp --dport 18432 -j REDIRECT --to-ports 18432
-A POSTROUTING -d 10.0.0.0/8 -j RETURN
-A POSTROUTING -o eth1 -j MASQUERADE
-A POSTROUTING -o frognet0 -j MASQUERADE
-A POSTROUTING -o wg0 -j MASQUERADE
-A POSTROUTING -o wg1 -j MASQUERADE
-A POSTROUTING -o wg2 -j MASQUERADE
-A POSTROUTING -o wg3 -j MASQUERADE
-A POSTROUTING -o wg4 -j MASQUERADE
-A POSTROUTING -o wg5 -j MASQUERADE
-A POSTROUTING -o wg6 -j MASQUERADE
-A POSTROUTING -o wg7 -j MASQUERADE
-A POSTROUTING -o wg8 -j MASQUERADE
-A POSTROUTING -o wg9 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o wlan0 -j MASQUERADE
-A POSTROUTING -o wlan1 -j MASQUERADE
COMMIT
# Completed on Thu Jun  4 15:11:32 2026
